jellyfin/04-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: default
  labels:
    app: jellyfin
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8096
      targetPort: 8096
      nodePort: 30096
      name: http
  selector:
    app: jellyfin
